@@ -138,7 +138,8 @@ OpenGL Renderer:
 
 Sound:
 ------
-- Added a new sdl audio driver.
+- Added a new version of SDL audio driver which fixed a rare bug where the game
+  would randomly quit with an error message 'Cache_MakeLRU: active link'.
 - Added external music file support via SDL_mixer as an extra patch.
 
 CDAudio:
